# quiz

./: Makefile  flake.nix  questions.txt  questionsArcane
backend/: Cargo.toml  dev.sqlite  gen_answers.sh  schema.sql
backend/src/: game.rs  main.rs
backend/src/models/: category.rs  mod.rs  question.rs  user.rs
backend/src/routers/: auth.rs  game.rs
frontend/: index.html  package-lock.json
frontend/src/: WelcomePage.tsx  index.css  main.tsx
frontend/src/routes/: Login.tsx  Quiz.tsx  Register.tsx  Result.tsx  WelcomePage.tsx
