[package]
name = "quiz"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "uuid", "macros", "runtime-tokio", "regexp"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["normalize-path", "fs", "cors"] }
uuid = { version = "1.11.1", features = ["serde", "v4"] }
